# hw7

./: README.md
hw7/: CLI.py  alembic.ini  connect.py  main.py  models.py  pyproject.toml  seeds.py
hw7/migs/versions/: 3ec654ed406a_init.py
